--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <body>
     <h1>ข้อมูลการขายสินค้า</h1>
     <p>แสดงรายรายงานยอดขายสินค้าในแต่ละเดือน</p>
+    <p>แสดงรายรายงานยอดขายสินค้าในแต่ละวัน</p>
 </body>
 </html>
